# simulation

./: .gitignore  AnaLEMMA.C  AnaLEMMA.h  README.md  README_LEMMA.md  Vector_To_Array.C  prova.md
setup/: CMakeLists.txt  GNUmakefile  ListaProcessi.txt  debug.mac  high.mac  mainMCMC.cc  mainMCMC.cc~  mainMCMC.cp  mainMCMC.in  run1.mac  run1.mac~  vis.mac
setup/include/: B1ActionInitialization.hh  B1DetectorConstruction.hh  B1EventAction.hh  B1PrimaryGeneratorAction.hh  B1Run.hh  B1RunAction.hh  B1StackingAction.hh  B1SteppingAction.hh  HistoManager.hh  PhysicsList.hh  PhysicsListMessenger.hh  PurgMagTabulatedField3D.hh
setup/process_channeling/include/: G4ChannelingMaterialData.hh
setup/process_channeling/src/: G4ChannelingMaterialData.cc
setup/src/: B1ActionInitialization.cc  B1DetectorConstruction.cc  B1EventAction.cc  B1PrimaryGeneratorAction.cc  B1Run.cc  B1RunAction.cc  B1StackingAction.cc  B1SteppingAction.cc  HepMCG4AsciiReader.cc  HepMCG4Interface.cc  PhysicsList.cc  PhysicsListMessenger.cc  PurgMagTabulatedField3D.cc
